force-app/main/default/objects/SR_Feature_Flags__c/SR_Feature_Flags__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SR Feature Flags</label>
</CustomObject>