force-app/main/default/objects/SR_Feature_Flags__c/fields/Feature1__c.field-meta.xml
<CustomField>
    <fullName>Feature1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feature1</label>
    <type>Checkbox</type>
</CustomField>