force-app/main/default/objects/SR_Feature_Flags__c/fields/Feature2__c.field-meta.xml
<CustomField>
    <fullName>Feature2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Currently used for Intacct sync error handling</description>
    <label>Feature2</label>
    <type>Checkbox</type>
</CustomField>