force-app/main/default/objects/SR_Feature_Flags__c/fields/Feature3__c.field-meta.xml
<CustomField>
    <fullName>Feature3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feature3</label>
    <type>Checkbox</type>
</CustomField>